# sentienl

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  project.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 20260307_0001_initial_schema.py
config/: signals.json  strategies.json
docs/: implementation-log.md  operation-manual.md  project-plan-intraday.md  ui-implementation-prompt-for-claude-code.md  ui-plan.md  ui-priority-roadmap-and-stockcheck-ux.md  ui-specification.md  ui-ux-adjustment-brief-for-claude.md
scripts/: backup_db.sh  com.sentinel.backup-db.plist
sentinel/: __init__.py  __main__.py  backtest.py  backtest_minute.py  calendar.py  cli.py  completeness.py  config.py  db.py  http_client.py  indicator_cache.py  indicators.py  institutional.py  logging_utils.py  main_force.py  minute_bars.py  models.py  official_calendar.py  persistence.py  pipeline.py  providers.py  quality.py  query.py  stock_master.py  storage.py  strategies.py  utils.py
sentinel/analysis/: __init__.py  quality.py
sentinel/backtest/: __init__.py  daily.py  minute.py
sentinel/cli/: __init__.py  backfill_cmds.py  backtest_cmds.py  common.py  inspect_cmds.py  intraday_cmds.py  main.py  scan_cmds.py  sync_cmds.py
sentinel/datasources/: __init__.py  http_client.py  institutional.py  minute_bars.py  official_calendar.py  providers.py  stock_master.py
sentinel/domain/: __init__.py  calendar.py
sentinel/intraday/: engine.py  fetcher.py  historical_signals.py  indicators.py  notifiers.py  scheduler.py  snapshots.py  trades.py
sentinel/services/: __init__.py  backfill_service.py  backtest_service.py  enrichment.py  pipeline.py  scan_service.py  signal_check.py  sync_service.py
sentinel/storage/: __init__.py  engine.py  persistence.py
tests/: test_backtest_minute.py  test_calendar.py  test_cli.py  test_completeness.py  test_db.py  test_institutional.py  test_intraday_fetcher.py  test_intraday_scheduler.py  test_intraday_trades.py  test_main_force.py  test_pipeline.py  test_providers.py  test_quality.py  test_stock_master.py  test_storage.py  test_strategies.py
tests/ui/: conftest.py  test_backtest_compare.py  test_charts_institutional.py  test_command_runner.py  test_command_specs.py  test_layout.py  test_parsers.py  test_queries_daily_fetch.py  test_queries_institutional.py  test_stock_check_widgets.py  test_strategy_editor.py
ui/: app.py
ui/components/: charts.py  command_preview.py  filters.py  form_factory.py  (+4 more)
(+47 files in other folders)
