[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "跨市場策略選股系統：台股日線資料抓取、技術指標計算、規則式策略掃描與回測"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1",  # Styler.map 需 2.1+（ui/pages/11_Institutional.py）
    "requests>=2.31",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.32",
    "plotly>=5.18",
    "jsonschema>=4.21",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
    "pre-commit>=3.7",
]

[project.scripts]
sentinel = "sentinel.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39"]

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # black handles line length
    # 型別註解現代化規則：pydantic 於 py3.9 執行期評估註解，X | None 會炸；
    # TODO: 基線升到 python >= 3.10 後移除以下四項並跑 ruff --fix
    "UP006",
    "UP030",
    "UP035",
    "UP045",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["."]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["sentinel"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
